--- a/sobre.css
+++ b/sobre.css
@@ -19,7 +19,7 @@
 
 body {
 
-    background-color: white;
+    background-color: rgb(58, 28, 28);
     font-family: 'Roboto', sans-serif;
     background-position: right;
 }
